Fix badge alignment on mobile view

--- a/static/sass/_pattern_cube-table.scss
+++ b/static/sass/_pattern_cube-table.scss
@@ -133,16 +133,3 @@
     position: relative;
   }
 }
-
-.p-table__cell--share-actions {
-  overflow: visible;
-
-  .p-share-button {
-    margin-top: 0.5rem;
-    position: relative;
-
-    [class*="p-button"] {
-      margin-bottom: 0;
-    }
-  }
-}
